add logger, needs rework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(GeneticAlgorithm)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(GeneticAlgorithm src/main.cpp include/GeneticAlgorithm/Individual.h include/GeneticAlgorithm/Problem.h src/GeneticAlgorithm.cpp include/GeneticAlgorithm/GeneticAlgorithm.h src/TTPProblem.cpp include/GeneticAlgorithm/TTPProblem.h src/Individual.cpp src/KnapsackItem.cpp include/GeneticAlgorithm/KnapsackItem.h src/City.cpp include/GeneticAlgorithm/City.h)
+add_executable(GeneticAlgorithm src/main.cpp include/GeneticAlgorithm/Individual.h include/GeneticAlgorithm/Problem.h src/GeneticAlgorithm.cpp include/GeneticAlgorithm/GeneticAlgorithm.h src/TTPProblem.cpp include/GeneticAlgorithm/TTPProblem.h src/Individual.cpp src/KnapsackItem.cpp include/GeneticAlgorithm/KnapsackItem.h src/City.cpp include/GeneticAlgorithm/City.h src/Logger.cpp src/Logger.h)
