refactor project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,31 +5,31 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_executable(
         GeneticAlgorithm src/main.cpp
-        include/GeneticAlgorithm/Individual.h
-        include/GeneticAlgorithm/Problem.h
-        src/GeneticAlgorithm.cpp
-        include/GeneticAlgorithm/GeneticAlgorithm.h
-        src/TTPProblem.cpp
-        include/GeneticAlgorithm/TTPProblem.h
-        src/Individual.cpp
-        src/KnapsackItem.cpp
-        include/GeneticAlgorithm/KnapsackItem.h
-        src/City.cpp
-        include/GeneticAlgorithm/City.h
-        src/Logger.cpp
-        include/GeneticAlgorithm/Logger.h
-        src/HillClimber.cpp
-        include/GeneticAlgorithm/HillClimber.h
-        src/RandomSearch.cpp
-        include/GeneticAlgorithm/RandomSearch.h
-        include/GeneticAlgorithm/VectorHasher.h
-        src/VectorHasher.cpp
-        include/GeneticAlgorithm/Selector.h
-        src/TournamentSelector.cpp
-        include/GeneticAlgorithm/TournamentSelector.h
-        include/GeneticAlgorithm/Mutator.h
-        src/RandomSwapMutator.cpp
-        include/GeneticAlgorithm/RandomSwapMutator.h
-        src/Mutator.cpp
-        src/AllGeneRandomSwapMutator.cpp
-        include/GeneticAlgorithm/AllGeneRandomSwapMutator.h)
+        include/GeneticAlgorithm/problem/Individual.h
+        include/GeneticAlgorithm/problem/Problem.h
+        src/optimizers/GeneticAlgorithm.cpp
+        include/GeneticAlgorithm/optimizers/GeneticAlgorithm.h
+        src/problem/TTPProblem.cpp
+        include/GeneticAlgorithm/problem/TTPProblem.h
+        src/problem/Individual.cpp
+        src/problem/KnapsackItem.cpp
+        include/GeneticAlgorithm/problem/KnapsackItem.h
+        src/problem/City.cpp
+        include/GeneticAlgorithm/problem/City.h
+        src/util/Logger.cpp
+        include/GeneticAlgorithm/util/Logger.h
+        src/optimizers/HillClimber.cpp
+        include/GeneticAlgorithm/optimizers/HillClimber.h
+        src/optimizers/RandomSearch.cpp
+        include/GeneticAlgorithm/optimizers/RandomSearch.h
+        include/GeneticAlgorithm/util/VectorHasher.h
+        src/util/VectorHasher.cpp
+        include/GeneticAlgorithm/operators/Selector.h
+        src/operators/TournamentSelector.cpp
+        include/GeneticAlgorithm/operators/TournamentSelector.h
+        include/GeneticAlgorithm/operators/Mutator.h
+        src/operators/RandomSwapMutator.cpp
+        include/GeneticAlgorithm/operators/RandomSwapMutator.h
+        src/operators/Mutator.cpp
+        src/operators/AllGeneRandomSwapMutator.cpp
+        include/GeneticAlgorithm/operators/AllGeneRandomSwapMutator.h)
